petcare_execution/evidence_output/PETCARE-PH44A-CLOSURE/20260227T000926Z/verify/logs/ph44_verify_log.txt
=== PH44 VERIFY (PH43-B ZIP) ===
repo_root=/Users/waheebmahmoud/dev/petcare-evidence-repository/petcare_execution
input_zip=/Users/waheebmahmoud/dev/petcare-evidence-repository/petcare_execution/evidence_output/PETCARE-PH44A-CLOSURE/20260227T000926Z/input/PH43B_INPUT.zip
out_dir=/Users/waheebmahmoud/dev/petcare-evidence-repository/petcare_execution/evidence_output/PETCARE-PH44A-CLOSURE/20260227T000926Z/verify
zip_sha256=9728e46fa71412cea186e1923356b0eb27b31cd5f2908e845b8d3b16a4ec72c3
sidecar_sha256=9728e46fa71412cea186e1923356b0eb27b31cd5f2908e845b8d3b16a4ec72c3
sidecar_match=true
EXTRACT_OK
base_dir=/Users/waheebmahmoud/dev/petcare-evidence-repository/petcare_execution/evidence_output/PETCARE-PH44A-CLOSURE/20260227T000926Z/verify/work/extracted/20260226T230650Z
MANIFEST_JSON_OK
  File "<stdin>", line 48
    PY || VERIFY_HASH_OK="false"
        ^
SyntaxError: invalid syntax
